--- a/sisgee-master/sisgee/src/main/webapp/import_busca_aluno.jspf
+++ b/sisgee-master/sisgee/src/main/webapp/import_busca_aluno.jspf
@@ -3,6 +3,7 @@
     <div class="form-group col-md-4">
         <label for="matricula"><fmt:message key = "br.cefetrj.sisgee.resources.form.matricula"/></label>
         <div class="input-group">
+            <input type="hidden" id="tipoAluno" name="tipoAluno" value="${ param.tipoAluno }">
             <input type="hidden" id="idAluno" name="idAluno" value="${ param.idAluno }">
             <input type="text" maxlength="100" class="form-control ${ not empty idAlunoMsg ? 'is-invalid': 'is-valid' }" placeholder="<fmt:message key = "br.cefetrj.sisgee.import_busca_aluno.placeholder_matricula"/>" id="matricula" name="matricula" value="${ param.matricula }">
             <span class="input-group-btn"> 
