--- a/sisgee-master/sisgee/src/main/webapp/import_head.jspf
+++ b/sisgee-master/sisgee/src/main/webapp/import_head.jspf
@@ -32,4 +32,6 @@ fieldset legend.col-form-legend {
 div.form-row {
 	padding: 0px 15px;
 }
+
 </style>
+<link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.ico">
