Alterei Data para Date
alterei data de string para date

--- a/sisgee-master/sisgee/src/main/webapp/import_scripts.jspf
+++ b/sisgee-master/sisgee/src/main/webapp/import_scripts.jspf
@@ -167,7 +167,7 @@
 	        $.ajax({
 	            type: 'GET',
 	            url: 'BuscaConvenioBotaoServlet', //Servlet
-	            async: true, // habilita a função ajax() repassar os dados para a função pai
+	            async: false, // habilita a função ajax() repassar os dados para a função pai
 	            data: $elementConvenio.serialize(),
 	            dataType: "json",
 	            success: function(json){
@@ -221,7 +221,7 @@
 	        $.ajax({
 	            type: 'GET',
 	            url: 'BuscaConvenioBotaoServlet', //Servlet
-	            async: true, // habilita a função ajax() repassar os dados para a função pai
+	            async: false, // habilita a função ajax() repassar os dados para a função pai
 	            data: $elementConvenio.serialize(),
 	            dataType: "json",
 	            success: function(json){
