--- a/sisgee-master/sisgee/src/main/webapp/import_footer.jspf
+++ b/sisgee-master/sisgee/src/main/webapp/import_footer.jspf
@@ -1,6 +1,6 @@
 <%@include file="import_head.jspf"%>
 
-<footer class="footer mt-5">
+<footer class="footer">
 	<div class="alert alert-info" role="alert">
 		<div class="container">
 			<span class="text-muted">
@@ -8,6 +8,6 @@
 			<fmt:message key = "br.cefetrj.sisgee.resources.form.integrantesTrabalho"/><br>
 			<fmt:message key = "br.cefetrj.sisgee.resources.form.diogoMendonca"/>
 			</span>
-                </div>
-        </div>
+		</div>
+	</div>
 </footer>
