Ajuste em Busca Aluno
Claudio

Ajustes na Busca de Aluno para filtrar de acordo com a tela

--- a/sisgee-master/sisgee/src/main/webapp/import_scripts.jspf
+++ b/sisgee-master/sisgee/src/main/webapp/import_scripts.jspf
@@ -106,7 +106,7 @@
                     /**
                      * matricula é o campo de onde vc vai mandar a requisicao para a url
                      */
-	            data: $('#matricula').serialize(),
+	            data: { matricula: $('#matricula').serialize(), termoAditivo: $('#termoAditivo').serialize() },
 	            dataType: "json",
 	            success: function(json){
 	                result = json;
